@@ -1,6 +1,8 @@
 New entries should be added at the top
  
-2005-02-02 Incorporated  Fernando's matshow
+2005-02-02 Fixed a bug in dates mx2num - JDH
+
+2005-02-02 Incorporated Fernando's matshow - JDH
 
 2005-02-01 Added Fernando's figure num patch, including experemental
            support for pylab backend switching, LineCOllection.color
